--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ textarea {
 
 /*Large Background Image*/
 html {
-    background: url(../img/bkgd2.jpg) no-repeat center center fixed;
+    background: url('../img/stars.jpeg') no-repeat center center fixed;
     background-size: cover;
     height: 100%;
    /* set height to 100% - these are important for allowing content to vertically align */
@@ -120,17 +120,18 @@ body {
 
 #content {
     /* set the display to flex and use the justify-content & align-items properties to center the text within the div*/
-    background: #222;
-    background:rgba(0,0,0,0.7);
-    color: #fff;
-    font-family: 'Source Sans Pro', sans-serif;
+    background: #ffffff;
+    background:#ffffff;
+    color: #000020;
+    font-family: 'Roboto Mono', monospace;
     font-weight: 300;
-    font-size: 1.25em;
+    font-size: 1.3em;
+    text-align: center;
+    opacity: .75;
     line-height: 1.5em;
-    border-radius: 10px;
-    padding: 0px 30px;
-    width: 300px;
-    height: 300px;
+    padding: 0px 20px;
+    width: 250px;
+    height: 220px;
     display: flex;
     justify-content: center;
     align-items: center;
